major update for pqdecoder